tests/NormalTests/paczka1/small_fuzzy/33952741.err
Error in line 5: JiS A3C8 25,9
Error in line 4: JiS A139 93,2
Error in line 6: xcHtyIh A139 13,0
